test/libsolidity/syntaxTests/storageLayoutSpecifier/division_by_zero.sol
contract A layout at 1 / 0 {}
// ----
// TypeError 2271: (21-26): Built-in binary operator / cannot be applied to types int_const 1 and int_const 0.
